[project]
name = "inline-css"
version = "0.1.1"
description = "Library and CLI application for inlining CSS rules from a set of stylesheets and applying them to an HTML file using `style` attributes."
requires-python = ">=3.12"
authors = [{name = "Chris Myers", email = "me@crmyers.dev"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE.md"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
 ]

dependencies = [
    "css-specificity>=0.1.3",
    "cssselect>=1.4.0",
    "lxml>=6.1.1",
    "tinycss2>=1.5.1",
]

[project.urls]
Repository = "https://github.com/C7C8/inline-css"
Releases = "https://github.com/C7C8/inline-css/releases"

[project.scripts]
inline-css = "inline_css"
